gitops-repo/apps/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app-prod
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 3000
      targetPort: http
