gitops-repo/apps/backend/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
  namespace: app-prod
spec:
  parentRefs:
    - name: platform-gateway
      namespace: default
  hostnames:
    - api.mosalam.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend
          port: 3000
